# cmake-tree-sitter

./: .gitignore  .gitmodules  CMakeLists.txt
cli/src/tests/proc_macro/: Cargo.toml
cmake/: CMakeCargo.cmake  CMakeTestRustCompiler.cmake  FindRust.cmake
highlight/: Cargo.toml
highlight/include/tree_sitter/: highlight.h
impl/: CMakeLists.txt
test/highlight/: CMakeLists.txt  tsh.c
